<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:title="@string/setting_category_slideshow"
        >
        <CheckBoxPreference
            android:key="@string/setting_cb_slideshow_mode"
            android:title="@string/setting_cb_slideshow_mode_title"
            android:summaryOn="@string/setting_cb_slideshow_mode_summary_on"
            android:summaryOff="@string/setting_cb_slideshow_mode_summary_off"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:key="@string/setting_et_slideshow_interval"
            android:title="@string/setting_et_slideshow_interval_title"
            android:summary="@string/setting_et_slideshow_interval_summary"
            android:defaultValue="@string/setting_et_slideshow_interval_default"
            android:dependency="@string/setting_cb_slideshow_mode"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_category_image_gallery"
        >
        <CheckBoxPreference
            android:key="@string/setting_cb_shuffle_mode"
            android:title="@string/setting_cb_shuffle_mode_title"
            android:summaryOn="@string/setting_cb_shuffle_mode_summary_on"
            android:summaryOff="@string/setting_cb_shuffle_mode_summary_off"
            android:defaultValue="false"
            />
        <ListPreference
            android:key="@string/setting_lp_animation_list"
            android:title="@string/setting_lp_animation_list_title"
            android:defaultValue="1"
            android:entries="@array/animation_array"
            android:entryValues="@array/animation_array"
            android:dialogTitle="@string/setting_lp_animation_list_dialog_title"
            />
    </PreferenceCategory>

</PreferenceScreen>